# rechnungsprogramm-webanwendung

./: .gitattributes  .gitignore  2. Arbeitszeiterfassung Claus Middelhuß_01.02. - 28.02.2025.xlsx  6. Arbeitszeiterfassung Claus Middelhuß_01.07. - 31.07.2025.xlsx  8. Arbeitszeiterfassung Claus Middelhuß_01.10. - 31.10.2023.xlsx  README.md  README.txt  alte_rechnungen_zu_sql.py  build_canvas.py  datenbank-setup.sql  get_KdNr.py  hallo_welt.py  kunden_zu_sql.py  neustart_flask_service.sh  output_read.txt  pyproject.toml  read.py  rechnung_Vorlage.py  requirements.txt  setup-database.sh  start_dev_flask.sh  starte_flask_service.sh
backend/: app.py  common.py  config.py  database_config.py  mail_script.py
backend/kunden/: routes.py
backend/rechnungen/: routes.py
backend/rechnungsprogramm/: build_invoice.py  build_template.py  config.py  customer.py  find_speicherpfad.py  fonts.py  generate_pdf_name.py  generate_rechnungsnummer.py  invoice.py  main.py  numbered_canvas_class.py  table_machine.py  time_report.py
backend/static/: kunden_styles.css  rechnung_bearbeiten_styles.css  rechnungen_styles.css  styles.css  zeiterfassung_bearbeiten_styles.css  zeiterfassung_styles.css
backend/templates/: base.html  fehler.html  kunde_bearbeiten.html  kunden.html  rechnung_bearbeiten.html  rechnungen.html  zeiterfassung.html  (+1 more)
data/: Liste_Kunden.xlsx  farben_verändern.py  re_nr_log.txt  zeiterfassung_januar.xlsx
scripts_outdated/: alte_rechnungen_zu_sql.py
src/: build_canvas.py  config.py  main.py  table_machine_customer.py  table_machine_master_data.py
(+26 files in other folders)
