[project]
name = "rechnungsprogramm"
version = "0.1.0"
description = "Automatisierte Rechnungserstellung aus Excel-Dateien"
authors = [
  { name="Silas Rathgeber", email="it@silas-rathgeber.de" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "openpyxl",
  "pandas",
  "chardet==5.2.0",
  "et_xmlfile==2.0.0",
  "numpy==2.2.5",
  "openpyxl==3.1.5",
  "pandas==2.2.3",
  "pillow==11.2.1",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "reportlab==4.4.0",
  "six==1.17.0",
  "tabulate==0.9.0",
  "tzdata==2025.2",
  "appdirs"
]

[project.scripts]
rechnungsprogramm = "rechnungsprogramm.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"rechnungsprogramm.fonts" = ["*.ttf"]
"rechnungsprogramm.assets" =  ["*.jpg"]